testapi-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testapi
  name: testapi
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: testapi
